@@ -40,6 +40,7 @@ struct rha_object {
 extern       void       object_init(object_t root, object_t module);
 
 extern _rha_ object_t   new();
+extern       object_t   create_pt(int_t pt);
 extern       object_t   new_pt(int_t pt);
 extern       object_t   create_function(object_t (*code)(tuple_t),
 					bool_t varargs, int narg, ...);
